--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <script type="text/babel" src="javascripts/index.js"></script>
-
+    <script type="text/babel" src="javascripts/demo.js"></script>
   </body>
 </html>
